quotes-service/kubernetes/scratch/kubernetes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-apis
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /bills
            backend:
              service:
                name: bills
                port:
                  number: 80
          - path: /orders
            backend:
              service:
                name: orders
                port:
                  number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-apis
  annotations:
    konghq.com/plugins: api-auth  #or add multiple plugins
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /bills
            backend:
              service:
                name: bills
                port:
                  number: 80
          - path: /orders
            backend:
              service:
                name: orders
                port:
                  number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-apis
  annotations:
    konghq.com/plugins: api-auth, admins-acl-group, rate-limit-5rpm
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /bills
            backend:
              service:
                name: bills
                port:
                  number: 80
          - path: /orders
            backend:
              service:
                name: orders
                port:
                  number: 443
